/**
 * Created by gregoire frezet on 08/19/2016.
 */

syntax="proto3";

message ConnectionRequest
{
    string  shuttle_name    = 1;
    string  UID             = 2;
}


message ConnectionResult
{
    string  first_name      = 1;
    string  last_name       = 2;
    int32   access_level    = 3;
}