/*!**********************************************************************
* \file		sam.proto
* \date		15/06/2016
* \version	1.0.0
* \author	Augustin RENARD
* \brief	Proto file.
*			General message for sam protocol.
*************************************************************************
* \copyright [2004] - [2016] NAVYA\n
*  All Rights Reserved.
************************************************************************/

syntax="proto3";


////////// Android ///////////////

option java_package = "navya.tech.navyatraveller";

message Position
{
    double lat = 1;
    double lng = 2;
}

message AndroidMission
{
    repeated    Position    path            	= 1;
                uint64      duration        	= 2;    // min
                uint64      waiting_time    	= 3;    // min
                double      distance        	= 4;    // km
}

message onDemandMission
{
    string 	client 				= 1;
    string 	start 				= 2; 
    string 	end   				= 3;
	string	bluetooth_address 	= 4;
}


//////////////////////////////////////////////////////


message UpdateShuttle 
{
	string shuttleID 	= 1;
	uint64 posID 		= 2;

	// Mission management
	bool running		= 3;
	uint64 last_mission	= 4;
    Position location   = 5;
}

message Mission
{
	repeated uint64 missions = 1;
}